package edu.hitsz.basic;

public interface Exploed {

    void update();
}
